--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -817,7 +817,7 @@ p_rt1 <- df_m1_plot_rt %>%
 
 df_m1_plot_rt_diff <- df_m1_plot_rt %>%
   tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
-  dplyr::mutate(diff_GB_NM = Good_NM - Bad_NM,               # calculate the differences between coditions
+  dplyr::mutate(diff_GB_NM = Good_NM - Bad_NM,               # calculate the differences between conditions
                 diff_GN_NM = Good_NM - Neutral_NM,
                 diff_BN_NM = Bad_NM - Neutral_NM,
                 diff_GB_M = Good_M - Bad_M, 
@@ -1077,23 +1077,7 @@ sdt_ms_m1 <- df_ms %>%
                   cores = parallel::detectCores(),
                   backend = 'cmdstanr',  # with cmdstanr
                   file = here::here("glmmModels/sdt_ms_DummyCode_3_level"))
-# m <- df %>%
-# dplyr::filter(!is.na(RESP)) %>% # filter trials without response
-# dplyr::mutate(ismatch = ifelse(Matchness == 'Match', 1, 0),
-#         saymatch = ifelse((Matchness == 'Match' & ACC == 1) | 
-#                             (Matchness == 'Mismatch' & ACC == 0), 1, 0),
-#         Valence = factor(Valence, levels = c('Neutral', 'Bad', 'Good')),
-#         Identity = factor(Identity, levels = c('Self', 'Other'))) %>%
-# brms::brm(saymatch ~ 0 + Identity:Valence + ismatch:Identity:Valence + 
-#       (0 + Identity:Valence + ismatch:Identity:Valence | Subject),
-#     family = bernoulli(link="probit"),
-#     data = .,
-#     control = list(adapt_delta = .99),
-#     iter = 4000,
-#     thin = 2,
-#     cores = parallel::detectCores(),
-#     file = here::here(m_name))
-  
+
 summary(sdt_ms_m1)
 
 # # Get the variables in the model
@@ -1177,25 +1161,9 @@ df_ms_sdt_m1_plot <- df_ms_sdt_m1_pop %>%
                 Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad'))
                 ) 
 
-df_ms_sdt_m1_plot_diff <- df_ms_sdt_m1_plot %>%
-  tidyr::unite(term, c('params', 'Valence')) %>%
-  tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
-  dplyr::mutate(diff_GB_c = c_Good - c_Bad,                           # calculate the differences between conditions
-                diff_GN_c = c_Good - c_Neutral,
-                diff_BN_c = c_Bad - c_Neutral,
-                diff_GB_dprm = dprime_Good - dprime_Bad,
-                diff_GN_dprm = dprime_Good - dprime_Neutral,
-                diff_BN_dprm = dprime_Bad - dprime_Neutral) %>%
-  dplyr::select(condition, `.chain`, `.iteration`, `.draw`, Identity,
-               diff_GB_c,diff_GN_c, diff_BN_c,
-               diff_GB_dprm, diff_GN_dprm, diff_BN_dprm) %>%
-  tidyr::pivot_longer(cols = diff_GB_c:diff_BN_dprm, names_to = "term_diff", values_to =  "value") %>%  # wide to long
-  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_c','diff_GN_c', 'diff_BN_c',
-                                                         'diff_GB_dprm', 'diff_GN_dprm', 'diff_BN_dprm')))
-
 # plot the posterior of the d prime
 # use the overall mean values as the vlines
-vlines <- df_ms_sdt_m1_plot %>% 
+p_ms_sdt_vlines <- df_ms_sdt_m1_plot %>% 
         #tidyr::separate(term, c('params', 'Identity', 'Valence')) %>% 
         dplyr::mutate(Valence = factor(Valence, levels = c('Good', 'Neutral', 'Bad'))) %>%
         dplyr::filter(params == 'dprime') %>%
@@ -1211,42 +1179,83 @@ p_ms_dprime1 <- df_ms_sdt_m1_plot %>%
                       Identity = factor(Identity, levels = c("Self", "Other"))) %>%
         dplyr::filter(params == 'dprime') %>%
         dplyr::rename(Experiments = condition) %>%
+        dplyr::filter((value >= 0) & (value <= 4)) %>%  # limit the x-axis's value
         ggplot2::ggplot(aes(y = Experiments, x = value, color = Valence)) +
         tidybayes::stat_halfeye(aes(fill = Valence), alpha = 0.7) +
         facet_wrap(~Identity) + 
-        geom_vline(data = vlines, aes(xintercept = Mean,colour = Valence), linetype = "dashed") +
+        geom_vline(data = p_ms_sdt_vlines, aes(xintercept = Mean,colour = Valence), linetype = "dashed") +
         labs(x=expression('Posteior distribution of '~italic(d)~' prime')) + 
         theme_apa()
 
 # plot the posterior of the difference between d prime
-p_ms_dprime1_diff <- df_ms_sdt_m1_plot_diff %>%
-  dplyr::filter(str_detect(term_diff, '_dprm')) %>%
-  dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-  tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
-  ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x > 0))) +
-  tidybayes::stat_halfeye() +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  scale_fill_manual(values = c('gray80', 'skyblue')) +
-  xlab(expression(paste("Valence effect on", italic("d"), "prime", sep = ' '))) + 
-  facet_wrap( ~ term_diff, # scales = "free_y",
+df_ms_sdt_m1_plot_diff <- df_ms_sdt_m1_plot %>%
+        tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
+        tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
+        dplyr::mutate(
+                # diff_GN_c_S = c_Self_Good - c_Self_Neutral,
+                # diff_BN_c_S = c_Self_Bad - c_Self_Neutral,
+                # diff_GN_c_O = c_Other_Good - c_Other_Neutral,
+                # diff_BN_c_O = c_Other_Bad - c_Other_Neutral,
+                diff_GN_dprm_S = dprime_Self_Good - dprime_Self_Neutral,
+                diff_BN_dprm_S = dprime_Self_Bad - dprime_Self_Neutral,
+                diff_GN_dprm_O = dprime_Other_Good - dprime_Other_Neutral,
+                diff_BN_dprm_O = dprime_Other_Bad - dprime_Other_Neutral,
+                diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
+                diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                ) %>%
+  dplyr::select(condition, `.chain`, `.iteration`, `.draw`,
+               diff_GN_dprm_S, diff_BN_dprm_S, diff_GN_dprm_O, diff_BN_dprm_O,
+               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
+  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_dprm_S', 'diff_BN_dprm_S', 'diff_GN_dprm_O', 'diff_BN_dprm_O',
+                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+
+p_ms_dprime1_diff_val <- df_ms_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(Experiments = condition) %>%
+        ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('gray80', 'skyblue')) +
+        xlab(expression(paste("Valence effect on ", italic("d"), " prime", sep = ' '))) + 
+        facet_wrap( ~ term_diff, # scales = "free_y",
                nrow = 1,
                labeller = label_parsed)
 
-# plot the posterior of difference between c, supplementary figure
-df_ms_sdt_m1_plot_diff %>%
-  dplyr::filter(str_detect(term_diff, '_c')) %>%
-  dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-  dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-  tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
-  ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x > 0))) +
-  tidybayes::stat_halfeye() +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  scale_fill_manual(values = c('gray80', 'skyblue')) +
-  xlab(expression(paste("Valence effect on", italic("d"), "prime", sep = ' ')))+ 
-  expand_limits(x = c(-3, 3)) + 
-  facet_wrap( ~ term_diff, # scales = "free_y",
+p_ms_dprime1_diff_id <- df_ms_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(Experiments = condition) %>%
+        ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('gray80', 'skyblue')) +
+        xlab(expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' '))) + 
+        facet_wrap( ~ term_diff, # scales = "free_y",
                nrow = 1,
-               labeller = label_parsed) 
+               labeller = label_parsed)
+# plot the posterior of difference between c, supplementary figure
+# df_ms_sdt_m1_plot_diff %>%
+#   dplyr::filter(str_detect(term_diff, '_c')) %>%
+#   dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+#   dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+#   tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+#   dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+#   ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x > 0))) +
+#   tidybayes::stat_halfeye() +
+#   geom_vline(xintercept = 0, linetype = "dashed") +
+#   scale_fill_manual(values = c('gray80', 'skyblue')) +
+#   xlab(expression(paste("Valence effect on", italic("d"), "prime", sep = ' ')))+ 
+#   expand_limits(x = c(-3, 3)) + 
+#   facet_wrap( ~ term_diff, # scales = "free_y",
+#                nrow = 1,
+#                labeller = label_parsed) 
 ```
 
 ```{r second meta rt, echo=FALSE, results='hide', warning=FALSE}
@@ -1364,14 +1373,16 @@ df_ms_m1_plot_rt <- df_ms_m1_rt_pop %>%
 
 # plot the posterior of the d prime
 # use the overall mean values as the vlines
-vlines <- df_ms_m1_plot_rt %>% 
+p_ms_rt1_vlines <- df_ms_m1_plot_rt %>% 
         tidyr::separate(term, c('Match', 'Identity', 'Valence')) %>% 
         dplyr::mutate(Valence = factor(Valence, levels = c('Good', 'Neutral', 'Bad')),
                       Identity = factor(Identity, levels = c("Self", "Other"))) %>%
         dplyr::filter(Match == 'M') %>%
         dplyr::filter(condition == "Overall") %>%
+        dplyr::filter((value >=200) & (value <=1200)) %>%
         dplyr::group_by(Identity, Valence) %>% 
-        dplyr::summarize(Mean = mean(value)) # %>%
+        tidybayes::median_hdci(value)
+        #dplyr::summarize(Mean = mean(value)) # %>%
         # dplyr::arrange(Mean)
 
 # THIS is the one which the final plot will based on!!!
@@ -1381,70 +1392,69 @@ p_ms_rt1 <- df_ms_m1_plot_rt %>%
                       Identity = factor(Identity, levels = c("Self", "Other"))) %>%
         dplyr::filter(Match == 'M') %>%
         dplyr::rename(Experiments = condition) %>%
+        dplyr::filter((value >=200) & (value <=1200)) %>%
         ggplot2::ggplot(aes(y = Experiments, x = value, color = Valence)) +
         tidybayes::stat_halfeye(aes(fill = Valence), alpha = 0.7) +
-        geom_vline(data = vlines, aes(xintercept = Mean,colour = Valence), linetype = "dashed") +
+        geom_vline(data = p_ms_rt1_vlines, aes(xintercept = value, colour = Valence), linetype = "dashed") +
         labs(x=expression('Posteior distribution of reaction times')) + 
         facet_wrap(~Identity) + 
-        geom_vline(data = vlines, aes(xintercept = Mean,colour = Valence), linetype = "dashed") +
         theme_apa()
 
+df_ms_m1_plot_rt_diff <- df_ms_m1_plot_rt %>%
+        tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
+        # calculate the difference between conditions, matched trials only
+        dplyr::mutate(diff_GN_M_S = M_Self_Good - M_Self_Neutral,               # calculate the differences between conditions
+                      diff_BN_M_S = M_Self_Bad - M_Self_Neutral,
+                      diff_GN_M_O = M_Other_Good - M_Other_Neutral,  
+                      diff_BN_M_O = M_Other_Bad - M_Other_Neutral,
+                      diff_SO_G   = M_Self_Good - M_Other_Good, 
+                      diff_SO_N   = M_Self_Neutral - M_Other_Neutral,
+                      diff_SO_B   = M_Self_Bad - M_Other_Bad) %>%
+        dplyr::select(condition, `.chain`, `.iteration`, `.draw`,
+                      diff_GN_M_S, diff_BN_M_S, diff_GN_M_O,
+                      diff_BN_M_O, diff_SO_G, diff_SO_N, diff_SO_B) %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_M_S','diff_BN_M_S', 'diff_GN_M_O', 'diff_BN_M_O',
+                                                                'diff_SO_G', 'diff_SO_N', 'diff_SO_B')))
 
-df_m1_plot_rt_diff <- df_m1_plot_rt %>%
-  tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
-  dplyr::mutate(diff_GB_NM = Good_NM - Bad_NM,               # calculate the differences between coditions
-                diff_GN_NM = Good_NM - Neutral_NM,
-                diff_BN_NM = Bad_NM - Neutral_NM,
-                diff_GB_M = Good_M - Bad_M, 
-                diff_GN_M = Good_M - Neutral_M,
-                diff_BN_M = Bad_M - Neutral_M,) %>%
-  dplyr::select(condition, `.chain`, `.iteration`, `.draw`,
-               diff_GB_NM,diff_GN_NM, diff_BN_NM,
-               diff_GB_M, diff_GN_M, diff_BN_M) %>%
-  tidyr::pivot_longer(cols = diff_GB_NM:diff_BN_M, names_to = "term_diff", values_to =  "value") %>%  # wide to long
-  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_NM','diff_GN_NM', 'diff_BN_NM',
-                                                         'diff_GB_M', 'diff_GN_M', 'diff_BN_M')))
-# 
-# df_m1_rt_plot %>% 
-#   dplyr::group_by(condition, term_diff, .chain) %>%
-#   dplyr::tally()
-
-# df_m1_rt_mean <- df_m1_rt_plot %>%
-#   #tidybayes::gather_draws(b_Intercept, b_ValenceBad, b_ValenceGood,
-#   #                        `b_ismatch_num`, `b_ValenceBad:ismatch_num`, 
-#   #                        `b_ValenceGood:ismatch_num`) %>%
-#   group_by(condition, term_diff) %>%       # this line not necessary (done automatically by spread_draws)
-#   tidybayes::mean_hdci(value)  # get the high density continuous intervals
-
-# plot the posterior of mismatch
-df_m1_plot_rt_diff  %>%
-  dplyr::filter(str_detect(term_diff, '_NM')) %>%
-  dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-  ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x < 0))) +
-  tidybayes::stat_halfeye() +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  scale_fill_manual(values = c('gray80', 'skyblue')) + 
-  xlab("Effect (differences) of valence on RT (Mismatch trials)")+
-  facet_wrap( ~ term_diff, 
+# plot the posterior of matching trials of valence
+p_ms_rt1_diff_val <- df_ms_m1_plot_rt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_M_')) %>%
+        dplyr::filter((value >= -200) & (value <= 200)) %>%
+        dplyr::rename(Experiments = condition) %>%
+        ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x < 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('gray80', 'skyblue')) + 
+        xlab("Effect of valence on RT (Match trials)") +
+        facet_wrap( ~ term_diff,
               # scales = "free_y", 
               nrow = 1,
               labeller = label_parsed)
 
-# plot the posterior of matching trials
-p_rt1_diff <- df_m1_plot_rt_diff %>%
-  dplyr::filter(str_detect(term_diff, '_M')) %>%
-  dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-  ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x < 0))) +
-  tidybayes::stat_halfeye() +
-  geom_vline(xintercept = 0, linetype = "dashed") +
-  scale_fill_manual(values = c('gray80', 'skyblue')) + 
-  xlab("Effect of valence on RT (Match trials)") +
-  facet_wrap( ~ term_diff,
+# plot the posterior of matching trials, diff between self and other
+p_ms_rt1_diff_id <- df_ms_m1_plot_rt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::filter((value >= -200) & (value <= 200)) %>%
+        dplyr::rename(Experiments = condition) %>%
+        ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x < 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('gray80', 'skyblue')) + 
+        xlab("Self referential effect on RT (Match trials)") +
+        facet_wrap( ~ term_diff,
               # scales = "free_y", 
               nrow = 1,
               labeller = label_parsed)
 ```
 
+```{r plot-bayes-meta-2, fig.cap="Effect of moral valence on RT and d'", fig.height=9, fig.width=15, warning=FALSE}
+library(patchwork)
+# (p_rt1 | p_dprime1)
+p_ms_rt1 + p_ms_dprime1 +
+        p_ms_dprime1_diff_val + p_ms_rt1_diff_val + 
+        p_ms_dprime1_diff_id + p_ms_rt1_diff_id + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 3, byrow = TRUE)
+```
 # Part 3: Implicit binding between valence and identity
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance will eliminate the effect observed in previous experiment. 
